<resources>
    <string name="app_name">Hyper Design Task</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="repeat_your_password">Repeat your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="email_address">Email Address</string>
    <string name="register_with_valid_email">Register With Valid Email</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="phone_number">phone number</string>
    <string name="country">Country</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="upload">Upload</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="name">Name</string>
    <string name="login_with_valid_number">Login with valid number</string>
    <string name="don_t_have_an_account">don\'t_have_an_account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_container">Add Container</string>
    <string name="request_quotion">Request Quotion</string>
    <string name="containers">Containers</string>
    <string name="enter_shipement_name">Enter Shipement name</string>
    <string name="name_of_shipment">Name of Shipment</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter description</string>
    <string name="quantity">Quantity</string>
    <string name="comment">Comment</string>
    <string name="write_your_comment">write your comment</string>
    <string name="status_pending">Status: Pending</string>
    <string name="shipment_description">Shipment Description</string>
    <string name="shipment_name">Shipment Name</string>
    <string name="containersm">Containers:</string>
</resources>