<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".home.ui.RequestQuotationFragment"
    android:background="@color/background">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/primary_dark"
            app:boxStrokeColor="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shipment_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_shipement_name" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/containers"
            android:layout_marginTop="10dp"
            android:textColor="@color/text_primary"
            android:textSize="16sp" />

        <!-- Dynamically add container fields -->
        <LinearLayout
            android:id="@+id/container_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <Button
            android:id="@+id/add_container_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/add_container"
            android:backgroundTint="@color/primary" />

        <Button
            android:id="@+id/request_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/request_quotion"
            android:backgroundTint="@color/primary" />
    </LinearLayout>
</ScrollView>
</FrameLayout>