<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:background="@color/background"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".register.ui.RegisterScreen">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/petrona"

            android:textSize="24sp"
            android:textColor="@color/text_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />
        <TextView
            android:id="@+id/textView3"
            android:fontFamily="@font/petrona"
            android:layout_marginStart="20dp"
            android:textSize="14sp"
            android:textColor="@color/text_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_with_valid_email" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:text="@string/name"
                android:textColor="@color/text_primary"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/primary_dark"
                app:boxStrokeWidth="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_name"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/text_secondary"
                    android:textSize="16sp" />


            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:text="@string/email_address"
                android:textColor="@color/text_primary"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/primary_dark"
                app:boxStrokeWidth="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_email_address"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/text_secondary"
                    android:textSize="16sp" />


            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/text_primary"
                android:textSize="16sp"
                android:text="@string/upload_photo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/profilePhoto"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/profile"
                    android:scaleType="centerCrop"
                    android:background="@drawable/rounded_corner_border" />

                <Button
                    android:layout_marginTop="10dp"
                    android:id="@+id/uploadButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary"
                    android:text="@string/upload" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/country"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/text_primary"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/countryDropdown"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/primary_dark"
                app:boxStrokeWidth="1dp"
                />
            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:text="@string/phone_number"
                android:textColor="@color/text_primary"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/primary_dark"
                app:boxStrokeWidth="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_phone_number"
                    android:inputType="phone"
                    android:textColor="@color/text_secondary"
                    android:textSize="16sp" />


            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:text="@string/password"
                android:textColor="@color/text_primary"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/primary_dark"
                app:boxStrokeWidth="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:textColor="@color/text_secondary"
                    android:textSize="16sp" />


            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:text="@string/confirm_password"
                android:textColor="@color/text_primary"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/primary_dark"
                app:boxStrokeWidth="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/repeatedPassword"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/repeat_your_password"
                    android:inputType="textPassword"
                    android:textColor="@color/text_secondary"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/singUp"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="250dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:fontFamily="@font/petrona"
                android:text="@string/sign_up"
                android:textSize="20sp"
                android:backgroundTint="@color/primary"
                app:cornerRadius="5dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="7dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:focusable="true"
                    android:fontFamily="@font/petrona"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/text_secondary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/petrona"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>


</ScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminateTint="@color/primary_dark" />


</FrameLayout>