<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:background="@color/background"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:windowSoftInputMode="adjustResize"
tools:context=".auth.ui.LoginActivity">


    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/textView2"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/petrona"

            android:textSize="24sp"
            android:textColor="@color/text_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />
        <TextView
            android:id="@+id/textView3"
            android:fontFamily="@font/petrona"
            android:layout_marginStart="20dp"
            android:textSize="14sp"
            android:textColor="@color/text_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with_valid_number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:text="@string/phone_number"
                android:textColor="@color/text_primary"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:hintTextColor="@color/primary_dark"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/primary_dark"
                app:boxStrokeWidth="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_phone_number"
                    android:inputType="phone"
                    android:textColor="@color/text_secondary"
                    android:textSize="16sp" />


            </com.google.android.material.textfield.TextInputLayout>



            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:text="@string/password"
                android:textColor="@color/text_primary"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:hintTextColor="@color/primary_dark"

                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/primary_dark"
                app:boxStrokeWidth="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:textColor="@color/text_secondary"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="250dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/primary_dark"
                android:layout_marginStart="80dp"
                android:fontFamily="@font/petrona"
                android:text="@string/login"
                android:textSize="20sp"
                android:backgroundTint="@color/primary"
                app:cornerRadius="5dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="7dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:focusable="true"
                    android:fontFamily="@font/petrona"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/text_secondary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/petrona"
                    android:text="@string/sign_up"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


<ProgressBar
    android:id="@+id/progressBar"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:visibility="gone"
    android:indeterminateTint="@color/primary_dark" />


</FrameLayout>